Updated Coordinator Details

--- a/views/contact-page.ejs
+++ b/views/contact-page.ejs
@@ -170,219 +170,6 @@
       <div class="container-c">
         <div class="team-section">
           <div class="heading-c">
-            <h1>Coordinators: 2023 Batch</h1>
-            <div class="line-style">
-              <img src="/assets/Vector 8.svg" alt="line image" />
-            </div>
-          </div>
-          <div class="team-grid">
-            <div class="team-card">
-              <div class="card-img">
-                <img src="/assets/Shiva Patel.svg" alt="card image" />
-              </div>
-              <div class="card-content">
-                <h3>Shiva Patel</h3>
-                <p>CSE | 2023 Batch</p>
-                <p>
-                  <i class="fa-solid fa-phone"></i
-                  ><a href="tel:+917080176843"> +91 7080176843</a>
-                </p>
-                <p>
-                  <i class="fa-solid fa-envelope"></i
-                  ><a
-                    href="mailto:shiva.cse.1963@iiitbh.ac.in
-                                "
-                  >
-                    shiva.cse.1963@iiitbh.ac.in
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="team-card">
-              <div class="card-img">
-                <img src="/assets/Rishabh Agrawal.svg" alt="card image" />
-              </div>
-              <div class="card-content">
-                <h3>Rishabh Agrawal</h3>
-                <p>CSE | 2023 Batch</p>
-                <p>
-                  <i class="fa-solid fa-phone"></i
-                  ><a href="tel:+919528303487"> +91 9528303487</a>
-                </p>
-                <p>
-                  <i class="fa-solid fa-envelope"></i
-                  ><a
-                    href="mailto:rishabh.cse.1954@iiitbh.ac.in
-                                "
-                  >
-                    rishabh.cse.1954@iiitbh.ac.in
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="team-card">
-              <div class="card-img">
-                <img src="/assets/Sohail.svg" alt="card image" />
-              </div>
-              <div class="card-content">
-                <h3>Sohail Khan</h3>
-                <p>ECE | 2023 Batch</p>
-                <p>
-                  <i class="fa-solid fa-phone"></i
-                  ><a href="tel:+9194859450485"> +91 94859450485</a>
-                </p>
-                <p>
-                  <i class="fa-solid fa-envelope"></i
-                  ><a href="mailto:sohail.ece.1970@iiitbh.ac.in">
-                    sohail.ece.1970@iiitbh.ac.in</a
-                  >
-                </p>
-              </div>
-            </div>
-            <div class="team-card">
-              <div class="card-img">
-                <img src="/assets/Sumanth.jpeg" alt="card image" />
-              </div>
-              <div class="card-content">
-                <h3>ADARI SAI SUMANTH</h3>
-                <p>ECE | 2023 Batch</p>
-                <p>
-                  <i class="fa-solid fa-phone"></i
-                  ><a href="tel:+917981839178"> +91 7981839178</a>
-                </p>
-                <p>
-                  <i class="fa-solid fa-envelope"></i
-                  ><a
-                    href="mailto:adari.ece.1904@iiitbh.ac.in
-                                "
-                  >
-                    adari.ece.1904@iiitbh.ac.in
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="team-card">
-              <div class="card-img">
-                <img src="/assets/Tarun Kannaojia.svg" alt="card image" />
-              </div>
-              <div class="card-content">
-                <h3>Tarun Kannoujia</h3>
-                <p>MEA | 2023 Batch</p>
-                <p>
-                  <i class="fa-solid fa-phone"></i
-                  ><a href="tel:+918290040908"> +91 8290040908</a>
-                </p>
-                <p>
-                  <i class="fa-solid fa-envelope"></i
-                  ><a
-                    href="mailto:tarun.mea.1974@iiitbh.ac.in
-                                "
-                  >
-                    tarun.mea.1974@iiitbh.ac.in
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="team-card">
-              <div class="card-img">
-                <img src="/assets/Isha Chaudhary.svg" alt="card image" />
-              </div>
-              <div class="card-content">
-                <h3>Isha Chaudhary</h3>
-                <p>MEA | MTECH 2023 Batch</p>
-                <p>
-                  <i class="fa-solid fa-phone"></i
-                  ><a href="tel:+916204574448"> +91 6204574448</a>
-                </p>
-                <p>
-                  <i class="fa-solid fa-envelope"></i
-                  ><a
-                    href="mailto:isha.mea.2102013@iiitbh.ac.in
-                                "
-                  >
-                    isha.mea.2102013@iiitbh.ac.in
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="team-card">
-              <div class="card-img">
-                <img src="/assets/Divya Bhattacharya.svg" alt="card image" />
-              </div>
-              <div class="card-content">
-                <h3>Dibya Bhattacharya</h3>
-                <p>ECE | MTECH 2023 Batch</p>
-                <p>
-                  <i class="fa-solid fa-phone"></i
-                  ><a href="tel:+918287140239"> +91 8287140239</a>
-                </p>
-                <p>
-                  <i class="fa-solid fa-envelope"></i
-                  ><a
-                    href="mailto:dibya.ece.2102010@iiitbh.ac.in
-                                "
-                  >
-                    dibya.ece.2102010@iiitbh.ac.in
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="team-card">
-              <div class="card-img">
-                <img src="/assets/Rishabh Hanselia.svg" alt="card image" />
-              </div>
-              <div class="card-content">
-                <h3>Rishabh Hanselia</h3>
-                <p>CSE | MTECH 2023 Batch</p>
-                <p>
-                  <i class="fa-solid fa-phone"></i
-                  ><a href="tel:+917600634563"> +91 7600634563</a>
-                </p>
-                <p>
-                  <i class="fa-solid fa-envelope"></i
-                  ><a
-                    href="mailto:rishab.cse.2102020@iiitbh.ac.in
-                                "
-                  >
-                    rishab.cse.2102020@iiitbh.ac.in
-                  </a>
-                </p>
-              </div>
-            </div>
-            <!-- <div class="team-card">
-                        <div class="card-img">
-                            <img src="/assets\prateek.jpg" alt="card image" />
-                        </div>
-                        <div class="card-content">
-                            <h3>Prateek Chandra</h3>
-                            <p>ECE | 2024 Batch</p>
-                            <p><i class="fa-solid fa-phone"></i> +91 9470678079</p>
-                        </div>
-                    </div>
-                    <div class="team-card">
-                        <div class="card-img">
-                            <img src="/assets\prem.jpg" alt="card image" />
-                        </div>
-                        <div class="card-content">
-                            <h3>Prem Kumar</h3>
-                            <p>CSE | 2024 Batch</p>
-                            <p><i class="fa-solid fa-phone"></i> +91 9470678079</p>
-                        </div>
-                    </div>
-                    <div class="team-card">
-                        <div class="card-img">
-                            <img src="/assets\prateek.jpg" alt="card image" />
-                        </div>
-                        <div class="card-content">
-                            <h3>Prateek Chandra</h3>
-                            <p>ECE | 2024 Batch</p>
-                            <p><i class="fa-solid fa-phone"></i> +91 9470678079</p>
-                        </div>
-                    </div> -->
-          </div>
-        </div>
-        <div class="team-section">
-          <div class="heading-c">
             <h1>Coordinators: 2024 Batch</h1>
             <div class="line-style">
               <img src="/assets/Vector 8.svg" alt="line image" />
@@ -499,6 +286,130 @@
                   <i class="fa-solid fa-envelope"></i
                   ><a href="mailto:saurabh.mea.20102@iiitbh.ac.in">
                     saurabh.mea.20102@iiitbh.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="team-section">
+          <div class="heading-c">
+            <h1>Coordinators: 2025 Batch</h1>
+            <div class="line-style">
+              <img src="/assets/Vector 8.svg" alt="line image" />
+            </div>
+          </div>
+          <div class="team-grid">
+            <div class="team-card">
+              <div class="card-img">
+                <img src="/assets\mea_1.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Shrijal Patel</h3>
+                <p>MEA | 2025 Batch</p>
+                <p>
+                  <i class="fa-solid fa-phone"></i
+                  ><a href="tel:+919835631444"> +91 9835631444</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:shrijal.2101097me@iiitbh.ac.in">
+                  shrijal.2101097me@iiitbh.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="team-card">
+              <div class="card-img">
+                <img src="/assets\cse_1.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Shreya Mishra</h3>
+                <p>CSE | 2025 Batch</p>
+                <p>
+                  <i class="fa-solid fa-phone"></i
+                  ><a href="tel:+918368329396"> +91 8368329396</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:shreya.2101046cs@iiitbh.ac.in">
+                    shreya.2101046cs@iiitbh.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="team-card">
+              <div class="card-img">
+                <img src="/assets/mea_2.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Piyush Anand</h3>
+                <p>MEA | 2025 Batch</p>
+                <p>
+                  <i class="fa-solid fa-phone"></i
+                  ><a href="tel:+919870321859"> +91 9870321859</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:piyush.2101092me@iiitbh.ac.in">
+                    piyush.2101092me@iiitbh.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="team-card">
+              <div class="card-img">
+                <img src="/assets/cse_2.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Ishika Jha</h3>
+                <p>CSE | 2025 Batch</p>
+                <p>
+                  <i class="fa-solid fa-phone"></i
+                  ><a href="tel:+919821061286"> +91 9821061286</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:ishika.2101213cs@iiitbh.ac.in">
+                  ishika.2101213cs@iiitbh.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="team-card">
+              <div class="card-img">
+                <img src="/assets/ece_1.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Nandini Pandey</h3>
+                <p>ECE | 2025 Batch</p>
+                <p>
+                  <i class="fa-solid fa-phone"></i
+                  ><a href="tel:+919369864748"> +91 9369864748</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:nandini.2101082ec@iiitbh.ac.in">
+                    nandini.2101082ec@iiitbh.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="team-card">
+              <div class="card-img">
+                <img src="/assets/ece_2.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Vijay Pandey</h3>
+                <p>ECE | 2025 Batch</p>
+                <p>
+                  <i class="fa-solid fa-phone"></i
+                  ><a href="tel:+917248259603"> +91 7248259603</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:vijay.2101161ec@iiitbh.ac.in">
+                    vijay.2101161ec@iiitbh.ac.in</a
                   >
                 </p>
               </div>
