Added Demographic Details

--- a/views/for-recruiters.ejs
+++ b/views/for-recruiters.ejs
@@ -209,29 +209,29 @@
               <div class="card-details-fr">
                 <ul>
                   <h2>Demographics Branchwise</h2>
-                  <li>Final Year (2019-2023 Batch ) Department Wise</li>
-                  <!-- <img
-                    src="/assets/departement-wise-graph.png"
-                    alt="departement-wise-graph"
-                  /> -->
+                  <li>Final Year (2023-2024 Batch ) Department Wise</li>
+                  <img
+                    src="/assets/2024.png"
+                    alt="department-wise-graph"
+                  />
                   <div id="final1" class="charts"></div>
-                  <li>Pre Final Year (2020-2024 Batch) Department Wise</li>
-                  <!-- <img
-                    src="/assets/pre-final-year-branchwise-graph.png"
+                  <li>Pre Final Year (2024-2025 Batch) Department Wise</li>
+                  <img
+                    src="/assets/2025.png"
                     alt="pre-final-year-department-wise-graph"
-                  /> -->
+                  />
                   <div id="pre-final1" class="charts"></div>
                 </ul>
                 <ul>
                   <h2>Demographics State wise</h2>
-                  <li>BTech Final Year (2017-2021 Batch) State Wise</li>
+                  <li>BTech Final Year (2023-2024 Batch) State Wise</li>
                   <img
-                    src="/assets/State-wise-graph.png"
+                    src="/assets/map.png"
                     alt="state-wise-graph"
                   />
-                  <li>BTech Pre Final Year (2018-2022 Batch ) State Wise</li>
+                  <li>BTech Pre Final Year (2024-2025 Batch ) State Wise</li>
                   <img
-                    src="/assets/pre-final-year-state-wise.png"
+                    src="/assets/map_2.png"
                     alt="pre-final-year-state-wise-graph"
                   />
                 </ul>
