--- a/views/director-page.ejs
+++ b/views/director-page.ejs
@@ -77,6 +77,8 @@
     <link rel="stylesheet" href="/css\page-css\director-page.css" />
     <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
 
+    <title>Director's Message</title>
+
     <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
@@ -144,7 +146,7 @@
           students, governmental organizations, and the general public, we can
           fulfill our mission.
         </p>
-        <h3>Prof. Arvind Choubey</h3>
+        <h3>Prof. P.K. Jain</h3>
       </div>
     </section>
     <%-include("./footer.ejs")%>
