--- a/views/index.ejs
+++ b/views/index.ejs
@@ -613,7 +613,7 @@
               <a href="/directorPage"
                 >See more <i class="fa fa-arrow-right"></i
               ></a>
-              <h3>Prof. Arvind Choubey</h3>
+              <h3>Prof. P.K.Jain</h3>
             </div>
             <div class="image-d">
               <img src="/assets\director.jpg" alt="director image" />
