M.Tech Coordinators data updated

--- a/views/contact-page.ejs
+++ b/views/contact-page.ejs
@@ -290,6 +290,44 @@
                 </p>
               </div>
             </div>
+            <div class="team-card">
+              <div class="card-img">
+                <img src="/assets/robin.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Robin Newton</h3>
+                <p>CSE (M.TECH) | 2024 Batch</p>
+                <p>
+                  <i class="fa-solid fa-phone"></i
+                  ><a href="tel:+918837288378"> +91 8837288378</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:robin.cse.2202008@iiitbh.ac.in">
+                    robin.cse.2202008@iiitbh.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="team-card">
+              <div class="card-img">
+                <img src="/assets/ravi.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Ravi Prakash Tiwari</h3>
+                <p>ECE (M.TECH) | 2024 Batch</p>
+                <p>
+                  <i class="fa-solid fa-phone"></i
+                  ><a href="tel:+918178010570"> +91 8178010570</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:ravi.ece.2202007@iiitbh.ac.in">
+                    ravi.ece.2202007@iiitbh.ac.in</a
+                  >
+                </p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="team-section">
