Updated for recruiters page

--- a/views/contact-page.ejs
+++ b/views/contact-page.ejs
@@ -447,8 +447,7 @@
                 <p>
                   <i class="fa-solid fa-envelope"></i
                   ><a href="mailto:vijay.2101161ec@iiitbh.ac.in">
-                    vijay.2101161ec@iiitbh.ac.in</a
-                  >
+                    vijay.2101161ec@iiitbh.ac.in</a>
                 </p>
               </div>
             </div>
