--- a/views/for-recruiters.ejs
+++ b/views/for-recruiters.ejs
@@ -296,69 +296,6 @@
               <div class="team-grid">
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="/assets/Sohail.svg" alt="card image" />
-                  </div>
-                  <div class="card-content">
-                    <h3>Sohail Khan</h3>
-                    <p>ECE | 2023 Batch</p>
-                    <p>
-                      <i class="fa-solid fa-phone"></i
-                      ><a href="tel:+9194859450485"> +91 94859450485</a>
-                    </p>
-                    <p>
-                      <i class="fa-solid fa-envelope"></i
-                      ><a href="mailto:sohail.ece.1970@iiitbh.ac.in">
-                        sohail.ece.1970@iiitbh.ac.in</a
-                      >
-                    </p>
-                  </div>
-                </div>
-                <div class="team-card">
-                  <div class="card-img">
-                    <img src="/assets/Shiva Patel.svg" alt="card image" />
-                  </div>
-                  <div class="card-content">
-                    <h3>Shiva Patel</h3>
-                    <p>CSE | 2023 Batch</p>
-                    <p>
-                      <i class="fa-solid fa-phone"></i
-                      ><a href="tel:+917080176843"> +91 7080176843</a>
-                    </p>
-                    <p>
-                      <i class="fa-solid fa-envelope"></i
-                      ><a
-                        href="mailto:shiva.cse.1963@iiitbh.ac.in
-                                      "
-                      >
-                        shiva.cse.1963@iiitbh.ac.in
-                      </a>
-                    </p>
-                  </div>
-                </div>
-                <div class="team-card">
-                  <div class="card-img">
-                    <img src="/assets/Rishabh Agrawal.svg" alt="card image" />
-                  </div>
-                  <div class="card-content">
-                    <h3>Rishabh Agrawal</h3>
-                    <p>CSE | 2023 Batch</p>
-                    <p>
-                      <i class="fa-solid fa-phone"></i
-                      ><a href="tel:+919528303487"> +91 9528303487</a>
-                    </p>
-                    <p>
-                      <i class="fa-solid fa-envelope"></i
-                      ><a
-                        href="mailto:rishabh.cse.1954@iiitbh.ac.in
-                                      "
-                      >
-                        rishabh.cse.1954@iiitbh.ac.in
-                      </a>
-                    </p>
-                  </div>
-                </div>
-                <div class="team-card">
-                  <div class="card-img">
                     <img src="/assets\prem.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
@@ -397,114 +334,232 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="/assets/Isha Chaudhary.svg" alt="card image" />
+                    <img src="/assets/harshit sharma.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
-                    <h3>Isha Chaudhary</h3>
-                    <p>MEA | MTECH 2023 Batch</p>
+                    <h3>Harshit Sharma</h3>
+                    <p>CSE | 2024 Batch</p>
                     <p>
                       <i class="fa-solid fa-phone"></i
-                      ><a href="tel:+916204574448"> +91 6204574448</a>
+                      ><a href="tel:+919318359813"> +91 9318359813</a>
                     </p>
                     <p>
                       <i class="fa-solid fa-envelope"></i
-                      ><a
-                        href="mailto:isha.mea.2102013@iiitbh.ac.in
-                                      "
+                      ><a href="mailto:harshit.cse.20012@iiitbh.ac.in">
+                        harshit.cse.20012@iiitbh.ac.in</a
                       >
-                        isha.mea.2102013@iiitbh.ac.in
-                      </a>
                     </p>
                   </div>
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Divya Bhattacharya.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/harshit pandey.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
-                    <h3>Dibya Bhattacharya</h3>
-                    <p>ECE | MTECH 2023 Batch</p>
+                    <h3>Harshit Pandey</h3>
+                    <p>ECE | 2024 Batch</p>
                     <p>
                       <i class="fa-solid fa-phone"></i
-                      ><a href="tel:+918287140239"> +91 8287140239</a>
+                      ><a href="tel:+919431907914"> +91 9431907914</a>
                     </p>
                     <p>
                       <i class="fa-solid fa-envelope"></i
-                      ><a
-                        href="mailto:dibya.ece.2102010@iiitbh.ac.in
-                                      "
+                      ><a href="mailto:harshit.ece.20069@iiitbh.ac.in">
+                        harshit.ece.20069@iiitbh.ac.in</a
                       >
-                        dibya.ece.2102010@iiitbh.ac.in
-                      </a>
                     </p>
                   </div>
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="/assets/Tarun Kannaojia.svg" alt="card image" />
+                    <img src="/assets/rajiv.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
-                    <h3>Tarun Kannoujia</h3>
-                    <p>MEA | 2023 Batch</p>
+                    <h3>Rajiv Ranjan</h3>
+                    <p>MeA | 2024 Batch</p>
                     <p>
                       <i class="fa-solid fa-phone"></i
-                      ><a href="tel:+918290040908"> +91 8290040908</a>
+                      ><a href="tel:+919608792801"> +91 9608792801</a>
                     </p>
                     <p>
                       <i class="fa-solid fa-envelope"></i
-                      ><a
-                        href="mailto:tarun.mea.1974@iiitbh.ac.in
-                                      "
+                      ><a href="mailto:rajiv.mea.20096@iiitbh.ac.in">
+                        rajiv.mea.20096@iiitbh.ac.in</a
                       >
-                        tarun.mea.1974@iiitbh.ac.in
-                      </a>
                     </p>
                   </div>
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="/assets/Sumanth.jpeg" alt="card image" />
+                    <img src="/assets/saurabh.JPG" alt="card image" />
                   </div>
                   <div class="card-content">
-                    <h3>ADARI SAI SUMANTH</h3>
-                    <p>ECE | 2023 Batch</p>
+                    <h3>Saurabh Kumar</h3>
+                    <p>Mea | 2024 Batch</p>
                     <p>
                       <i class="fa-solid fa-phone"></i
-                      ><a href="tel:+917981839178"> +91 7981839178</a>
+                      ><a href="tel:+918763031930"> +91 8763031930</a>
                     </p>
                     <p>
                       <i class="fa-solid fa-envelope"></i
-                      ><a
-                        href="mailto:adari.ece.1904@iiitbh.ac.in
-                                      "
+                      ><a href="mailto:saurabh.mea.20102@iiitbh.ac.in">
+                        saurabh.mea.20102@iiitbh.ac.in</a
                       >
-                        adari.ece.1904@iiitbh.ac.in
-                      </a>
                     </p>
                   </div>
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="/assets/Rishabh Hanselia.svg" alt="card image" />
+                    <img src="/assets/robin.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
-                    <h3>Rishabh Hanselia</h3>
-                    <p>CSE | MTECH 2023 Batch</p>
+                    <h3>Robin Newton</h3>
+                    <p>CSE (M.TECH) | 2024 Batch</p>
                     <p>
                       <i class="fa-solid fa-phone"></i
-                      ><a href="tel:+917600634563"> +91 7600634563</a>
+                      ><a href="tel:+918837288378"> +91 8837288378</a>
                     </p>
                     <p>
                       <i class="fa-solid fa-envelope"></i
-                      ><a
-                        href="mailto:rishab.cse.2102020@iiitbh.ac.in
-                                      "
+                      ><a href="mailto:robin.cse.2202008@iiitbh.ac.in">
+                        robin.cse.2202008@iiitbh.ac.in</a
                       >
-                        rishab.cse.2102020@iiitbh.ac.in
-                      </a>
+                    </p>
+                  </div>
+                </div>
+                <div class="team-card">
+                  <div class="card-img">
+                    <img src="/assets/ravi.jpg" alt="card image" />
+                  </div>
+                  <div class="card-content">
+                    <h3>Ravi Prakash Tiwari</h3>
+                    <p>ECE (M.TECH) | 2024 Batch</p>
+                    <p>
+                      <i class="fa-solid fa-phone"></i
+                      ><a href="tel:+918178010570"> +91 8178010570</a>
+                    </p>
+                    <p>
+                      <i class="fa-solid fa-envelope"></i
+                      ><a href="mailto:ravi.ece.2202007@iiitbh.ac.in">
+                        ravi.ece.2202007@iiitbh.ac.in</a
+                      >
+                    </p>
+                  </div>
+                </div>
+              <!-- </div>
+            </div> -->
+            <!-- <div class="team-section">
+              <div class="team-grid"> -->
+                <div class="team-card">
+                  <div class="card-img">
+                    <img src="/assets\mea_1.jpg" alt="card image" />
+                  </div>
+                  <div class="card-content">
+                    <h3>Shrijal Patel</h3>
+                    <p>MEA | 2025 Batch</p>
+                    <p>
+                      <i class="fa-solid fa-phone"></i
+                      ><a href="tel:+919835631444"> +91 9835631444</a>
+                    </p>
+                    <p>
+                      <i class="fa-solid fa-envelope"></i
+                      ><a href="mailto:shrijal.2101097me@iiitbh.ac.in">
+                      shrijal.2101097me@iiitbh.ac.in</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="team-card">
+                  <div class="card-img">
+                    <img src="/assets\cse_1.jpg" alt="card image" />
+                  </div>
+                  <div class="card-content">
+                    <h3>Shreya Mishra</h3>
+                    <p>CSE | 2025 Batch</p>
+                    <p>
+                      <i class="fa-solid fa-phone"></i
+                      ><a href="tel:+918368329396"> +91 8368329396</a>
+                    </p>
+                    <p>
+                      <i class="fa-solid fa-envelope"></i
+                      ><a href="mailto:shreya.2101046cs@iiitbh.ac.in">
+                        shreya.2101046cs@iiitbh.ac.in</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="team-card">
+                  <div class="card-img">
+                    <img src="/assets/mea_2.jpg" alt="card image" />
+                  </div>
+                  <div class="card-content">
+                    <h3>Piyush Anand</h3>
+                    <p>MEA | 2025 Batch</p>
+                    <p>
+                      <i class="fa-solid fa-phone"></i
+                      ><a href="tel:+919870321859"> +91 9870321859</a>
+                    </p>
+                    <p>
+                      <i class="fa-solid fa-envelope"></i
+                      ><a href="mailto:piyush.2101092me@iiitbh.ac.in">
+                        piyush.2101092me@iiitbh.ac.in</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="team-card">
+                  <div class="card-img">
+                    <img src="/assets/cse_2.jpg" alt="card image" />
+                  </div>
+                  <div class="card-content">
+                    <h3>Ishika Jha</h3>
+                    <p>CSE | 2025 Batch</p>
+                    <p>
+                      <i class="fa-solid fa-phone"></i
+                      ><a href="tel:+919821061286"> +91 9821061286</a>
+                    </p>
+                    <p>
+                      <i class="fa-solid fa-envelope"></i
+                      ><a href="mailto:ishika.2101213cs@iiitbh.ac.in">
+                      ishika.2101213cs@iiitbh.ac.in</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="team-card">
+                  <div class="card-img">
+                    <img src="/assets/ece_1.jpg" alt="card image" />
+                  </div>
+                  <div class="card-content">
+                    <h3>Nandini Pandey</h3>
+                    <p>ECE | 2025 Batch</p>
+                    <p>
+                      <i class="fa-solid fa-phone"></i
+                      ><a href="tel:+919369864748"> +91 9369864748</a>
+                    </p>
+                    <p>
+                      <i class="fa-solid fa-envelope"></i
+                      ><a href="mailto:nandini.2101082ec@iiitbh.ac.in">
+                        nandini.2101082ec@iiitbh.ac.in</a
+                      >
+                    </p>
+                  </div>
+                </div>
+                <div class="team-card">
+                  <div class="card-img">
+                    <img src="/assets/ece_2.jpg" alt="card image" />
+                  </div>
+                  <div class="card-content">
+                    <h3>Vijay Pandey</h3>
+                    <p>ECE | 2025 Batch</p>
+                    <p>
+                      <i class="fa-solid fa-phone"></i
+                      ><a href="tel:+917248259603"> +91 7248259603</a>
+                    </p>
+                    <p>
+                      <i class="fa-solid fa-envelope"></i
+                      ><a href="mailto:vijay.2101161ec@iiitbh.ac.in">
+                        vijay.2101161ec@iiitbh.ac.in</a>
                     </p>
                   </div>
                 </div>
