--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -72,7 +73,7 @@
     <meta name="og:country-name" content="INDIA" />
     <title>Recruitment Portal | IIIT Bhagalpur</title>
 
-    <link rel="stylesheet" href="/css\jaf.css" />
+    <link rel="stylesheet" href="jaf.css" />
     <link
       rel="icon"
       type="image/png"
@@ -775,6 +776,7 @@
                 </div>
               </div>
               <div class="new_btn submit-btn">
+                <div class="g-recaptcha" data-sitekey="6Lfld3YpAAAAABxNykLeRc9CW5An_lcLyEDsMQir"></div>
                 <button type="submit" class="btn">Submit now</button>
               </div>
             </form>
