--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -325,7 +325,7 @@
                       class="form-control"
                       placeholder="Enter Tel Number"
                     />
-                  </div>
+                   </div>
                 </div>
                 <h2>2.b Contact Details: First Contact Person</h2>
                 <div class="row-div">
@@ -784,7 +784,7 @@
         </div>
         <div class="job-content-3">
           <div class="heading">
-            <h1>Submition Details</h1>
+            <h1>Submission Details</h1>
           </div>
           <div class="preview">
             <p>
