--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -782,7 +782,7 @@
                 ></div> -->
                 <button
                   type="submit"
-                  class="g-recaptcha btn"
+                  class="btn"
                   data-sitekey="6LeMoIcpAAAAAH1X0nWdtCgQqpXD7Q87vDrb2lyU"
                   data-callback="onSubmit"
                   data-action="submit"
