Placement Portal Updated

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -67,7 +67,7 @@
             <a href="/contact">People</a>
           </div>
           <div class="menu-item">
-            <a href="https://iiitbh.pod.ai/">Placement portal</a>
+            <a href="https://students.cognavi.com/login">Placement portal</a>
           </div>
           <div class="menu-item" onclick="window.open('/profile','_target');">
             Student Profile
