Placement Portal Updated

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -46,7 +46,7 @@
       <a href="https://calendar.google.com/calendar/u/0/embed?src=c_2f58dce10e4deb5ee53e07b0634dbfed3794cb729598525edc1a3da8a2df1e34@group.calendar.google.com&ctz=Asia/Kolkata" target="_blank">Calendar</a>
     </div>
     <div class="nav-item">
-      <a href="https://iiitbh.pod.ai/" target="_blank">POD</a>
+      <a href="https://students.cognavi.com/login" target="_blank">Cognavi</a>
     </div>
   </div>
   <div class="hamburger">
